(library
 (public_name raylib-jsoo)
 (name raylib_jsoo)
 (libraries ojs js_of_ocaml)
 (js_of_ocaml
  (javascript_files raylib.js))
 (preprocess
  (pps gen_js_api.ppx)))

(rule
 (deps ../vendor/raylib/src/libraylib.a)
 (targets raylib.js)
 (action
  (run
   emcc
   ../vendor/raylib/src/libraylib.a
   -o
   raylib.js
   -sUSE_GLFW=3
   -sLINKABLE=1
   -sWASM=1
   -gsource-map
   -sMODULARIZE
   -s
   "EXPORT_NAME=\"createModule\""
   -sEXPORTED_FUNCTIONS=_malloc,_free
   "-sEXPORT_ALL"
   -sSINGLE_FILE)))

; (rule
;  (deps raylib.js test.html)
;  (targets test_copied.html)
;  (action
;   (copy test.html test_copied.html)))
; 
; (rule
;  (deps
;   raylib_glue.cpp
;   raylib.idl
;   ../vendor/raylib/src/raylib.h
;   ../vendor/raylib/src/raymath.h
;   ../vendor/raylib/src/rlgl.h
;   ../vendor/raylib/src/libraylib.a)
;  (targets raylib.js)
;  (action
;   (progn
;    (copy ../vendor/raylib/src/raylib.h raylib.h)
;    (copy ../vendor/raylib/src/raymath.h raymath.h)
;    (copy ../vendor/raylib/src/rlgl.h rlgl.h)
;    (copy ../vendor/raylib/src/libraylib.a libraylib.a)
;    (run
;     /opt/homebrew/Cellar/emscripten/3.1.44/libexec/tools/webidl_binder
;     raylib.idl
;     raylib.js)
;    (run
;     emcc
;     libraylib.a
;     -lembind
;     raylib_stubs.cpp
;     -o
;     raylib.js
;     -sUSE_GLFW=3
;     -sWASM=1
;     -sSINGLE_FILE))))

; (rule
;  (deps
;   raylib_stubs.cpp
;   ../vendor/raylib/src/raylib.h
;   ../vendor/raylib/src/raymath.h
;   ../vendor/raylib/src/rlgl.h
;   ../vendor/raylib/src/libraylib.a)
;  (targets raylib.js)
;  (action
;   (progn
;    (copy ../vendor/raylib/src/raylib.h raylib.h)
;    (copy ../vendor/raylib/src/raymath.h raymath.h)
;    (copy ../vendor/raylib/src/rlgl.h rlgl.h)
;    (copy ../vendor/raylib/src/libraylib.a libraylib.a)
;    (run
;     emcc
;     libraylib.a
;     -lembind
;     raylib_stubs.cpp
;     -o
;     raylib.js
;     -sUSE_GLFW=3
;     -sWASM=1
;     -sSINGLE_FILE))))
; 
; ;      emcmake
; ;      cmake
; ;      -D
; ;      PLATFORM=Web
; ;      -D
; ;      BUILD_EXAMPLES=FALSE
; ;      -B
; ;      wasm
; ;      -Wno-dev
; ;      -G
; ;      "Unix Makefiles"
; ;      "-DCMAKE_EXE_LINKER_FLAGS=-s USE_GLFW=3"
; ;      "-DCMAKE_EXE_LINKER_FLAGS=--bind")
; ;     (chdir
; ;      wasm
; ;      (run make))
; ;     (run
; ;      emcc
; ;      wasm/raylib/libraylib.a
; ;      -o
; ;      raylib.js
; ;      -sUSE_GLFW=3
; ;      -sWASM=1
; ;      -sSINGLE_FILE)))
; ;   (run bash -c "cp ../vendor/raylib/wasm/raylib/libraylib.a ../vendor/raylib/src/ ./"))))
; 
