(library
 (public_name raylib-jsoo)
 (name raylib_jsoo)
 (libraries ojs js_of_ocaml)
 (js_of_ocaml
  (javascript_files raylib.js))
 (modes byte)
 (preprocess
  (pps gen_js_api.ppx)))

(cinaps
 (files javascript_api.ml)
 (libraries cinaps_stubs))

(rule
 (deps ../vendor/raylib/src/libraylib.a)
 (targets raylib-no-global.js)
 (action
  (progn
   (run mkdir -p emcc-cache)
   (run
    emcc
    ../vendor/raylib/src/libraylib.a
    -o
    raylib-no-global.js
    --cache
    emcc-cache
    -sUSE_GLFW=3
    -sLINKABLE=1
    -sWASM=1
    -sMODULARIZE
    -s
    "EXPORT_NAME=\"createModule\""
    -sEXPORTED_FUNCTIONS=_malloc,_free
    "-sEXPORT_ALL"
    -sSINGLE_FILE))))

(rule
 (deps raylib-no-global.js)
 (targets raylib.js)
 (action
  (with-stdout-to
   raylib.js
   (progn
    (cat raylib-no-global.js)
    (echo "this.createModule = createModule;")))))
